WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13461
REGRESSION: Can't upload attachments to bugzilla since the file upload control is reset immediately
https://bugs.webkit.org/show_bug.cgi?id=13461
Summary
REGRESSION: Can't upload attachments to bugzilla since the file upload contro...
mitz
Reported
2007-04-23 16:14:09 PDT
To reproduce: 1) Click the Create a New Attachment link above. 2) Click the Choose File button. 3) Choose a file. The file control changes briefly to show the selected file, but then reverts to "no file selected". This regressed in the last day or so.
Attachments
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2007-04-23 17:51:35 PDT
Committed revision 21056
Adele Peterson
Comment 2
2007-04-23 17:53:35 PDT
I made a note in the Radar for the original bug that caused this, so I don't think we need a separate Radar for this. Removing the keyword.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug