        Fix by Darin, reviewed by me.

Fix for REGRESSION: Can't upload attachments to bugzilla since the file upload control is reset immediately
        http://bugs.webkit.org/show_bug.cgi?id=13461

        * rendering/RenderFileUploadControl.cpp: (WebCore::RenderFileUploadControl::updateFromElement):
        Only clear the FileChooser if the value is empty *and* (not or) the filename is empty.



Canonical link: https://commits.webkit.org/17579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21056 268f45cc-cd09-0410-ab3c-d52691b4dbfc